[gd_scene load_steps=9 format=3 uid="uid://b2e54c0k78tb2"]

[ext_resource type="Theme" uid="uid://jg0ki33q0a7v" path="res://assets/ui/theme.tres" id="1_jh48c"]
[ext_resource type="PackedScene" uid="uid://r20l7yuf6lky" path="res://scenes/ui/PlanetButton.tscn" id="2_58c6y"]
[ext_resource type="Script" path="res://scenes/ui/host_or_play.gd" id="2_cm5k0"]
[ext_resource type="Texture2D" uid="uid://bgaswbi2a6k4x" path="res://assets/ui/back_icon.png" id="4_y7w3n"]
[ext_resource type="Texture2D" uid="uid://vixlvdkfb2ap" path="res://assets/ui/join_icon.png" id="6_e5iys"]
[ext_resource type="Texture2D" uid="uid://bfklaqu7dbu7x" path="res://assets/ui/host_icon.png" id="7_yqd73"]
[ext_resource type="PackedScene" uid="uid://bded2rf7xlooi" path="res://scenes/ui/host.tscn" id="8_6qhos"]
[ext_resource type="PackedScene" uid="uid://c3lai7uycpsm1" path="res://scenes/ui/Join.tscn" id="9_rgi3j"]

[node name="HostOrPlay" type="Control" node_paths=PackedStringArray("join_menu", "host_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_jh48c")
script = ExtResource("2_cm5k0")
join_menu = NodePath("ChildMenus/Join")
host_menu = NodePath("ChildMenus/Host")

[node name="Menu" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
mouse_filter = 2

[node name="MenuOptions" type="Control" parent="Menu"]
layout_mode = 2
mouse_filter = 2

[node name="Join" parent="Menu/MenuOptions" instance=ExtResource("2_58c6y")]
z_index = -10
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 101.777
offset_top = 154.68
offset_right = 101.777
offset_bottom = 154.68
grow_horizontal = 1
grow_vertical = 1
text = "Join"
planet_color = Color(0.207843, 0.603922, 0.345098, 1)
icon = ExtResource("6_e5iys")

[node name="Host" parent="Menu/MenuOptions" instance=ExtResource("2_58c6y")]
z_index = 11
layout_mode = 2
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 498.223
offset_top = 165.32
offset_right = 498.223
offset_bottom = 165.32
text = "Host"
planet_color = Color(0.894118, 0.533333, 0.776471, 1)
icon = ExtResource("7_yqd73")

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
layout_mode = 2
mouse_filter = 2

[node name="Back" parent="Menu/CenterContainer" node_paths=PackedStringArray("sub_planets") instance=ExtResource("2_58c6y")]
z_index = 1
layout_mode = 2
text = "Back"
planet_color = Color(1, 0.239216, 0.415686, 1)
icon = ExtResource("4_y7w3n")
orbit_speed = 0.1
sub_planets = [NodePath("../../MenuOptions/Join"), NodePath("../../MenuOptions/Host")]

[node name="ChildMenus" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Join" parent="ChildMenus" instance=ExtResource("9_rgi3j")]
visible = false
layout_mode = 1

[node name="Host" parent="ChildMenus" instance=ExtResource("8_6qhos")]
visible = false
layout_mode = 1

[connection signal="button_pressed" from="Menu/MenuOptions/Join" to="." method="_on_join_button_pressed"]
[connection signal="button_pressed" from="Menu/MenuOptions/Host" to="." method="_on_host_button_pressed"]
[connection signal="button_pressed" from="Menu/CenterContainer/Back" to="." method="_on_back_button_pressed"]
[connection signal="back" from="ChildMenus/Join" to="." method="_on_join_back"]
[connection signal="back" from="ChildMenus/Host" to="." method="_on_host_back"]
